tests/rascal/negative/parse_errors/L1/reserved1.ob
MODULE Bla;

BEGIN
  BEGIN := 1;
END Bla.
